refactor: MVC에서 V는 없고 MC는 있는
