# docs/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: /
 definitions:
-  database.FileTracking:
+  models.FileTracking:
     properties:
       downloadCount:
         type: integer
@@ -16,6 +16,21 @@ definitions:
         type: boolean
       size:
         type: integer
+      uploadDate:
+        type: string
+    type: object
+  models.TextTracking:
+    properties:
+      data:
+        type: string
+      downloadCount:
+        type: integer
+      downloadLimit:
+        type: integer
+      expireTime:
+        type: string
+      textId:
+        type: string
       uploadDate:
         type: string
     type: object
@@ -198,7 +213,7 @@ paths:
             - $ref: '#/definitions/utils.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/database.FileTracking'
+                  $ref: '#/definitions/models.FileTracking'
               type: object
       summary: List file items.
       tags:
@@ -303,7 +318,12 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/utils.Response'
+            allOf:
+            - $ref: '#/definitions/utils.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/models.TextTracking'
+              type: object
       summary: List text items.
       tags:
       - text
